Revert "Alignment Fix in Templates"
This reverts commit 61412572c62bf5337f2a0ed0af49ca6fb0fb823a.

--- a/Static/css/styles.css
+++ b/Static/css/styles.css
@@ -15,6 +15,4 @@
 
 /* #endregion */
 
-body{
-    background:#f3fffc;
-    }
+
